--- a/react-graded/src/App.css
+++ b/react-graded/src/App.css
@@ -14,18 +14,18 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #0f1f3f;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(8px + 2vmin);
   color: white;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #00a4d2;
 }
 
 @keyframes App-logo-spin {
